deno.json[license]

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "name": "@cndi/known-templates",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "exports": "./mod.ts",
   "tasks": {
     "test": "deno test --allow-net"
